force-app/main/default/objects/Community__c/fields/Staging_Area__c.field-meta.xml
<CustomField>
    <fullName>Staging_Area__c</fullName>
    <label>Staging Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>