force-app/main/default/objects/Community__c/fields/Stop_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Stop_Sequence__c</fullName>
    <description>Order in route on service day (Lawn Care)</description>
    <label>Stop Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>