force-app/main/default/objects/Community__c/fields/Storm_Water_Plan__c.field-meta.xml
<CustomField>
    <fullName>Storm_Water_Plan__c</fullName>
    <label>Storm Water Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>