force-app/main/default/objects/Community__c/fields/Street_Tree_Species__c.field-meta.xml
<CustomField>
    <fullName>Street_Tree_Species__c</fullName>
    <label>Street Tree Species / Sizes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>