force-app/main/default/objects/Community__c/fields/Street_Trees_Count__c.field-meta.xml
<CustomField>
    <fullName>Street_Trees_Count__c</fullName>
    <inlineHelpText>Number of street trees included per lot package</inlineHelpText>
    <label>Street Trees (count)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>