force-app/main/default/objects/Community__c/fields/Swale_Placement__c.field-meta.xml
<CustomField>
    <fullName>Swale_Placement__c</fullName>
    <label>Swale Placement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>