force-app/main/default/objects/Community__c/fields/Temp_Irrigation_Included__c.field-meta.xml
<CustomField>
    <fullName>Temp_Irrigation_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags if temporary irrigation is included in the install PO scope for billing.</description>
    <label>Temp Irrigation Included</label>
    <type>Checkbox</type>
</CustomField>