force-app/main/default/objects/Community__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <formula>CASE( TEXT(Builder_Account__r.Market__c),
  &quot;Asheville&quot;, &quot;Western NC&quot;,
  &quot;Charlotte&quot;, &quot;Metro Charlotte&quot;,
  &quot;Greenville&quot;, &quot;Upstate SC&quot;,
  &quot;Spartanburg&quot;, &quot;Upstate SC&quot;,
  &quot;&quot;
)</formula>
    <inlineHelpText>Auto-populated from the parent Market Account.</inlineHelpText>
    <label>Territory</label>
    <type>Text</type>
</CustomField>