force-app/main/default/objects/Community__c/validationRules/Aqua_Active_Requires_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Aqua_Active_Requires_Customer</fullName>
    <active>true</active>
    <description>Aqua cannot be activated on a community that is not an Aqua customer. Activation cannot precede the sale. Aqua gate field report, resolution step 2.</description>
    <errorConditionFormula>AND( Aqua_Active__c = true, Aqua_Customer__c = false )</errorConditionFormula>
    <errorDisplayField>Aqua_Active__c</errorDisplayField>
    <errorMessage>Aqua can only be Active on a community that is an Aqua Customer. Set Aqua Customer first.</errorMessage>
</ValidationRule>