force-app/main/default/objects/Community__c/validationRules/Market_Prerequisites_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Market_Prerequisites_Required</fullName>
    <active>true</active>
    <description>Block Community creation until the parent Market Account has Scope of Work, BMG pricing, and Contract populated.</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),
    (AND(
  NOT(ISBLANK(Builder_Account__c)),
  OR(
    ISBLANK(Builder_Account__r.Scope_Of_Work_Link__c),
    ISBLANK(Builder_Account__r.BMG_Link__c),
    ISBLANK(Builder_Account__r.Contract_Link__c)
  )
))
)</errorConditionFormula>
    <errorMessage>Market Account must have Scope of Work, BMG pricing, and Contract populated before a Community can be created. Update the Market Account, then try again.</errorMessage>
</ValidationRule>